--- a/notebooks/ccb_eval.ipynb
+++ b/notebooks/ccb_eval.ipynb
@@ -144,6 +144,7 @@
     "from Pipeline.ccb.dsjson.predictions import Predictor\n",
     "\n",
     "predictor = Predictor(filters=[lambda l: True])\n",
+    "pipeline = FilesPipeline()\n",
     "cfe = pipeline.lines_2_lines(slim, predictor.predict, path_gen=lambda p: p.replace('slim', 'predict'), process=True)\n",
     "cfe"
    ]
@@ -161,12 +162,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from Pipeline.dataflow import FilesPipeline\n",
     "from Pipeline.estimators import Estimator, evaluate\n",
     "import Pipeline.ccb.estimators\n",
     "import json\n",
     "\n",
+    "pipeline = FilesPipeline()\n",
     "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'baseline1_old': ['ccb|snips|0'], 'random': ['ccb|snips|0']}, online_estimator = 'ccb|ips|0')\n",
-    "result = estimator.preestimate(map(lambda l: json.loads(l), open(cfe[0])), '1min')"
+    "preestimates = pipeline.ndjson_2_csv(cfe, lambda objects: estimator.preestimate(objects, '1min'), path_gen=lambda p: p.replace('cfe', 'estimate'), process=True)\n"
    ]
   },
   {
@@ -182,18 +185,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate(estimator.read_preestimate('test.csv'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import itertools\n",
-    "import json\n",
-    "predictions = map(lambda l: json.loads(l), itertools.chain.from_iterable([open(f) for f in cfe]))"
+    "stats = pd.concat([estimator.read_preestimate(p) for p in preestimates])\n",
+    "evaluate(stats.resample('2min').sum())"
    ]
   },
   {
