--- a/notebooks/ccb_eval.ipynb
+++ b/notebooks/ccb_eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "HBox(children=(HTML(value='Total'), FloatProgress(value=0.0, max=1.0), HTML(value='')))",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "c492948474f1492892f7d2e2d5ab1bfa"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1.0), HTML(value='')))",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "3ce9ffa6c4fc453a976f44831d6fbf27"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['/Users/alextaim/data/.vw_cache/cache-p/f70c85ace19b22cd7f9b7d447761ecf0']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
    "source": [
     "from VwPipeline import Loggers, Handlers\n",
     "from VwPipeline.VwCache import VwCache\n",
@@ -41,9 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-3-18f64898fe11>, line 6)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-18f64898fe11>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    class CcbPredictions:\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "def ccb_predictions(files, index = 't'):\n",
     "    for f in files:\n",
@@ -89,9 +133,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['/Users/alextaim/data/ccb/slim/01.json']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
    "source": [
     "from Pipeline.dataflow import FilesPipeline\n",
     "from Pipeline.ccb.dsjson.processor import Processor\n",
@@ -112,9 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['/Users/alextaim/data/ccb/sample/01.json']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
    "source": [
     "from Pipeline.dataflow import FilesPipeline\n",
     "from Pipeline.ccb.dsjson.processor import Processor\n",
@@ -136,9 +202,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['/Users/alextaim/data/ccb/predict/01.json']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
    "source": [
     "from Pipeline.dataflow import FilesPipeline\n",
     "from Pipeline.ccb.dsjson.predictions import Predictor\n",
@@ -158,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +246,7 @@
     "\n",
     "pipeline = FilesPipeline()\n",
     "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'baseline1_old': ['ccb|snips|0'], 'random': ['ccb|snips|0']}, online_estimator = 'ccb|ips|0')\n",
-    "preestimates = pipeline.ndjson_2_csv(cfe, lambda objects: estimator.preestimate(objects, '1min'), path_gen=lambda p: p.replace('cfe', 'estimate'), process=True)\n"
+    "preestimates = pipeline.ndjson_2_csv(cfe, lambda objects: estimator.preestimate(objects, '1min'), path_gen=lambda p: p.replace('predict', 'estimate'), process=True)\n"
    ]
   },
   {
@@ -181,12 +258,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                           (online, ccb|ips|0, e)  \\\n",
+       "t                                                   \n",
+       "2021-03-27 17:09:00+00:00                0.333333   \n",
+       "2021-03-27 17:10:00+00:00                0.090909   \n",
+       "2021-03-27 17:11:00+00:00                0.091787   \n",
+       "2021-03-27 17:12:00+00:00                0.099622   \n",
+       "2021-03-27 17:13:00+00:00                0.103704   \n",
+       "\n",
+       "                           (baseline1_old, ccb|snips|0, e)  \\\n",
+       "t                                                            \n",
+       "2021-03-27 17:09:00+00:00                         0.333333   \n",
+       "2021-03-27 17:10:00+00:00                         0.090909   \n",
+       "2021-03-27 17:11:00+00:00                         0.071429   \n",
+       "2021-03-27 17:12:00+00:00                         0.141935   \n",
+       "2021-03-27 17:13:00+00:00                         0.086580   \n",
+       "\n",
+       "                           (random, ccb|snips|0, e)  \n",
+       "t                                                    \n",
+       "2021-03-27 17:09:00+00:00                  0.319149  \n",
+       "2021-03-27 17:10:00+00:00                  0.088975  \n",
+       "2021-03-27 17:11:00+00:00                  0.090767  \n",
+       "2021-03-27 17:12:00+00:00                  0.084033  \n",
+       "2021-03-27 17:13:00+00:00                  0.082170  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>(online, ccb|ips|0, e)</th>\n      <th>(baseline1_old, ccb|snips|0, e)</th>\n      <th>(random, ccb|snips|0, e)</th>\n    </tr>\n    <tr>\n      <th>t</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2021-03-27 17:09:00+00:00</th>\n      <td>0.333333</td>\n      <td>0.333333</td>\n      <td>0.319149</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:10:00+00:00</th>\n      <td>0.090909</td>\n      <td>0.090909</td>\n      <td>0.088975</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:11:00+00:00</th>\n      <td>0.091787</td>\n      <td>0.071429</td>\n      <td>0.090767</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:12:00+00:00</th>\n      <td>0.099622</td>\n      <td>0.141935</td>\n      <td>0.084033</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:13:00+00:00</th>\n      <td>0.103704</td>\n      <td>0.086580</td>\n      <td>0.082170</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "baseline_preestimates = pd.concat([estimator.read_preestimate(p) for p in preestimates])\n",
+    "baseline_stats = evaluate(baseline_preestimates.resample('1min').sum())\n",
+    "baseline_stats"
+   ]
+  },
+  {
+   "source": [
+    "# Evaluate predictions from vw"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats = pd.concat([estimator.read_preestimate(p) for p in preestimates])\n",
-    "evaluate(stats.resample('2min').sum())"
+    "from Pipeline.ccb.vw import predictions\n",
+    "vw_pred_openers = [lambda f: predictions.lines_2_predictions(open(p), open(f), 'cfe') for p in prediction_files]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = FilesPipeline()\n",
+    "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'cfe': ['ccb|snips|0'] })\n",
+    "preestimates = pipeline.ndjson_2_csv(cfe, lambda objects: estimator.preestimate(objects, '1min'), path_gen=lambda p: p.replace('predict', 'cfe'), process=True, openers=vw_pred_openers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                           (cfe, ccb|snips|0, e)\n",
+       "t                                               \n",
+       "2021-03-27 17:09:00+00:00               0.320513\n",
+       "2021-03-27 17:10:00+00:00               0.108569\n",
+       "2021-03-27 17:11:00+00:00               0.086635\n",
+       "2021-03-27 17:12:00+00:00               0.131921\n",
+       "2021-03-27 17:13:00+00:00               0.161565"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>(cfe, ccb|snips|0, e)</th>\n    </tr>\n    <tr>\n      <th>t</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2021-03-27 17:09:00+00:00</th>\n      <td>0.320513</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:10:00+00:00</th>\n      <td>0.108569</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:11:00+00:00</th>\n      <td>0.086635</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:12:00+00:00</th>\n      <td>0.131921</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:13:00+00:00</th>\n      <td>0.161565</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "baseline_preestimates = pd.concat([estimator.read_preestimate(p) for p in preestimates])\n",
+    "cfe_stats = evaluate(baseline_preestimates.resample('1min').sum())\n",
+    "cfe_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                           (online, ccb|ips|0, e)  \\\n",
+       "t                                                   \n",
+       "2021-03-27 17:09:00+00:00                0.333333   \n",
+       "2021-03-27 17:10:00+00:00                0.090909   \n",
+       "2021-03-27 17:11:00+00:00                0.091787   \n",
+       "2021-03-27 17:12:00+00:00                0.099622   \n",
+       "2021-03-27 17:13:00+00:00                0.103704   \n",
+       "\n",
+       "                           (baseline1_old, ccb|snips|0, e)  \\\n",
+       "t                                                            \n",
+       "2021-03-27 17:09:00+00:00                         0.333333   \n",
+       "2021-03-27 17:10:00+00:00                         0.090909   \n",
+       "2021-03-27 17:11:00+00:00                         0.071429   \n",
+       "2021-03-27 17:12:00+00:00                         0.141935   \n",
+       "2021-03-27 17:13:00+00:00                         0.086580   \n",
+       "\n",
+       "                           (random, ccb|snips|0, e)  (cfe, ccb|snips|0, e)  \n",
+       "t                                                                           \n",
+       "2021-03-27 17:09:00+00:00                  0.319149               0.320513  \n",
+       "2021-03-27 17:10:00+00:00                  0.088975               0.108569  \n",
+       "2021-03-27 17:11:00+00:00                  0.090767               0.086635  \n",
+       "2021-03-27 17:12:00+00:00                  0.084033               0.131921  \n",
+       "2021-03-27 17:13:00+00:00                  0.082170               0.161565  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>(online, ccb|ips|0, e)</th>\n      <th>(baseline1_old, ccb|snips|0, e)</th>\n      <th>(random, ccb|snips|0, e)</th>\n      <th>(cfe, ccb|snips|0, e)</th>\n    </tr>\n    <tr>\n      <th>t</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2021-03-27 17:09:00+00:00</th>\n      <td>0.333333</td>\n      <td>0.333333</td>\n      <td>0.319149</td>\n      <td>0.320513</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:10:00+00:00</th>\n      <td>0.090909</td>\n      <td>0.090909</td>\n      <td>0.088975</td>\n      <td>0.108569</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:11:00+00:00</th>\n      <td>0.091787</td>\n      <td>0.071429</td>\n      <td>0.090767</td>\n      <td>0.086635</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:12:00+00:00</th>\n      <td>0.099622</td>\n      <td>0.141935</td>\n      <td>0.084033</td>\n      <td>0.131921</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:13:00+00:00</th>\n      <td>0.103704</td>\n      <td>0.086580</td>\n      <td>0.082170</td>\n      <td>0.161565</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "source": [
+    "all_stats = baseline_stats.join(cfe_stats)"
    ]
   },
   {
