--- a/notebooks/ccb_eval.ipynb
+++ b/notebooks/ccb_eval.ipynb
@@ -15,38 +15,42 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
-      "text/plain": "HBox(children=(HTML(value='Total'), FloatProgress(value=0.0, max=1.0), HTML(value='')))",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c492948474f1492892f7d2e2d5ab1bfa",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "c492948474f1492892f7d2e2d5ab1bfa"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Total'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
+      ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-     "output_type": "display_data",
      "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1.0), HTML(value='')))",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ce9ffa6c4fc453a976f44831d6fbf27",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "3ce9ffa6c4fc453a976f44831d6fbf27"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
+      ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['/Users/alextaim/data/.vw_cache/cache-p/f70c85ace19b22cd7f9b7d447761ecf0']"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 2
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -80,9 +84,9 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
      "ename": "IndentationError",
      "evalue": "expected an indented block (<ipython-input-3-18f64898fe11>, line 6)",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-18f64898fe11>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    class CcbPredictions:\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
@@ -137,14 +141,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['/Users/alextaim/data/ccb/slim/01.json']"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -171,14 +175,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['/Users/alextaim/data/ccb/sample/01.json']"
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "execution_count": 6
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -206,14 +210,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['/Users/alextaim/data/ccb/predict/01.json']"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "execution_count": 7
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -227,11 +231,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Preestimate"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -250,11 +254,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Evaluate"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -262,8 +266,72 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>(online, ccb|ips|0, e)</th>\n",
+       "      <th>(baseline1_old, ccb|snips|0, e)</th>\n",
+       "      <th>(random, ccb|snips|0, e)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>t</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-03-27 17:09:00+00:00</th>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.319149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-27 17:10:00+00:00</th>\n",
+       "      <td>0.090909</td>\n",
+       "      <td>0.090909</td>\n",
+       "      <td>0.088975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-27 17:11:00+00:00</th>\n",
+       "      <td>0.091787</td>\n",
+       "      <td>0.071429</td>\n",
+       "      <td>0.090767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-27 17:12:00+00:00</th>\n",
+       "      <td>0.099622</td>\n",
+       "      <td>0.141935</td>\n",
+       "      <td>0.084033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-27 17:13:00+00:00</th>\n",
+       "      <td>0.103704</td>\n",
+       "      <td>0.086580</td>\n",
+       "      <td>0.082170</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
        "                           (online, ccb|ips|0, e)  \\\n",
        "t                                                   \n",
@@ -288,11 +356,11 @@
        "2021-03-27 17:11:00+00:00                  0.090767  \n",
        "2021-03-27 17:12:00+00:00                  0.084033  \n",
        "2021-03-27 17:13:00+00:00                  0.082170  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>(online, ccb|ips|0, e)</th>\n      <th>(baseline1_old, ccb|snips|0, e)</th>\n      <th>(random, ccb|snips|0, e)</th>\n    </tr>\n    <tr>\n      <th>t</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2021-03-27 17:09:00+00:00</th>\n      <td>0.333333</td>\n      <td>0.333333</td>\n      <td>0.319149</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:10:00+00:00</th>\n      <td>0.090909</td>\n      <td>0.090909</td>\n      <td>0.088975</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:11:00+00:00</th>\n      <td>0.091787</td>\n      <td>0.071429</td>\n      <td>0.090767</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:12:00+00:00</th>\n      <td>0.099622</td>\n      <td>0.141935</td>\n      <td>0.084033</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:13:00+00:00</th>\n      <td>0.103704</td>\n      <td>0.086580</td>\n      <td>0.082170</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      ]
      },
+     "execution_count": 21,
      "metadata": {},
-     "execution_count": 21
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -302,20 +370,10 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Evaluate predictions from vw"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Pipeline.ccb.vw import predictions\n",
-    "vw_pred_openers = [lambda f: predictions.lines_2_predictions(open(p), open(f), 'cfe') for p in prediction_files]"
    ]
   },
   {
@@ -324,6 +382,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from Pipeline.ccb.vw import predictions\n",
+    "vw_pred_openers = list(map(lambda p: (lambda f: predictions.lines_2_predictions(open(p), open(f), 'cfe')), prediction_files))\n",
+    "\n",
     "pipeline = FilesPipeline()\n",
     "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'cfe': ['ccb|snips|0'] })\n",
     "preestimates = pipeline.ndjson_2_csv(cfe, lambda objects: estimator.preestimate(objects, '1min'), path_gen=lambda p: p.replace('predict', 'cfe'), process=True, openers=vw_pred_openers)\n"
@@ -335,8 +396,58 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>(cfe, ccb|snips|0, e)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>t</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-03-27 17:09:00+00:00</th>\n",
+       "      <td>0.320513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-27 17:10:00+00:00</th>\n",
+       "      <td>0.108569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-27 17:11:00+00:00</th>\n",
+       "      <td>0.086635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-27 17:12:00+00:00</th>\n",
+       "      <td>0.131921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-27 17:13:00+00:00</th>\n",
+       "      <td>0.161565</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
        "                           (cfe, ccb|snips|0, e)\n",
        "t                                               \n",
@@ -345,11 +456,11 @@
        "2021-03-27 17:11:00+00:00               0.086635\n",
        "2021-03-27 17:12:00+00:00               0.131921\n",
        "2021-03-27 17:13:00+00:00               0.161565"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>(cfe, ccb|snips|0, e)</th>\n    </tr>\n    <tr>\n      <th>t</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2021-03-27 17:09:00+00:00</th>\n      <td>0.320513</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:10:00+00:00</th>\n      <td>0.108569</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:11:00+00:00</th>\n      <td>0.086635</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:12:00+00:00</th>\n      <td>0.131921</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:13:00+00:00</th>\n      <td>0.161565</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      ]
      },
+     "execution_count": 24,
      "metadata": {},
-     "execution_count": 24
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -359,13 +470,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merge evaluations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>(online, ccb|ips|0, e)</th>\n",
+       "      <th>(baseline1_old, ccb|snips|0, e)</th>\n",
+       "      <th>(random, ccb|snips|0, e)</th>\n",
+       "      <th>(cfe, ccb|snips|0, e)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>t</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-03-27 17:09:00+00:00</th>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.319149</td>\n",
+       "      <td>0.320513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-27 17:10:00+00:00</th>\n",
+       "      <td>0.090909</td>\n",
+       "      <td>0.090909</td>\n",
+       "      <td>0.088975</td>\n",
+       "      <td>0.108569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-27 17:11:00+00:00</th>\n",
+       "      <td>0.091787</td>\n",
+       "      <td>0.071429</td>\n",
+       "      <td>0.090767</td>\n",
+       "      <td>0.086635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-27 17:12:00+00:00</th>\n",
+       "      <td>0.099622</td>\n",
+       "      <td>0.141935</td>\n",
+       "      <td>0.084033</td>\n",
+       "      <td>0.131921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-27 17:13:00+00:00</th>\n",
+       "      <td>0.103704</td>\n",
+       "      <td>0.086580</td>\n",
+       "      <td>0.082170</td>\n",
+       "      <td>0.161565</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
        "                           (online, ccb|ips|0, e)  \\\n",
        "t                                                   \n",
@@ -390,29 +581,23 @@
        "2021-03-27 17:11:00+00:00                  0.090767               0.086635  \n",
        "2021-03-27 17:12:00+00:00                  0.084033               0.131921  \n",
        "2021-03-27 17:13:00+00:00                  0.082170               0.161565  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>(online, ccb|ips|0, e)</th>\n      <th>(baseline1_old, ccb|snips|0, e)</th>\n      <th>(random, ccb|snips|0, e)</th>\n      <th>(cfe, ccb|snips|0, e)</th>\n    </tr>\n    <tr>\n      <th>t</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2021-03-27 17:09:00+00:00</th>\n      <td>0.333333</td>\n      <td>0.333333</td>\n      <td>0.319149</td>\n      <td>0.320513</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:10:00+00:00</th>\n      <td>0.090909</td>\n      <td>0.090909</td>\n      <td>0.088975</td>\n      <td>0.108569</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:11:00+00:00</th>\n      <td>0.091787</td>\n      <td>0.071429</td>\n      <td>0.090767</td>\n      <td>0.086635</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:12:00+00:00</th>\n      <td>0.099622</td>\n      <td>0.141935</td>\n      <td>0.084033</td>\n      <td>0.131921</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:13:00+00:00</th>\n      <td>0.103704</td>\n      <td>0.086580</td>\n      <td>0.082170</td>\n      <td>0.161565</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      ]
      },
+     "execution_count": 25,
      "metadata": {},
-     "execution_count": 25
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "all_stats = baseline_stats.join(cfe_stats)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python385jvsc74a57bd0fcc4d9e2a8350f4b426fa88136c80c744ccaacb1fcccdec649c503ae8c1bacf1",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -424,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
