--- a/notebooks/ccb_eval.ipynb
+++ b/notebooks/ccb_eval.ipynb
@@ -2,11 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Pipeline.dataflow import FilesPipeline\n",
+    "from Pipeline.ccb.dsjson.processor import Processor\n",
+    "from Pipeline.ccb.dsjson.predictions import Predictor\n",
+    "from Pipeline.progress import tqdm_progress\n",
+    "from Pipeline import azure_blob_logs\n",
+    "from Pipeline.utils import Mapper\n",
+    "\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_data_root = Path('<your folder>')\n",
+    "\n",
+    "raw_folder = local_data_root.joinpath('raw')\n",
+    "slim_folder = local_data_root.joinpath('slim')\n",
+    "sample_folder = local_data_root.joinpath('sample')\n",
+    "predict_folder = local_data_root.joinpath('predict')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = ['/Users/alextaim/data/ccb/original/01.json']"
+    "files = [<some files from raw folder>]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate predictions"
    ]
   },
   {
@@ -79,51 +116,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-3-18f64898fe11>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-18f64898fe11>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    class CcbPredictions:\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
-   "source": [
-    "def ccb_predictions(files, index = 't'):\n",
-    "    for f in files:\n",
-    "        for l in open(f):\n",
-    "\n",
-    "\n",
-    "class CcbPredictions:\n",
-    "    def __init__(self, files, index='t'):\n",
-    "        self.files = files\n",
-    "        self.index = index\n",
-    "        \n",
-    "    def iter_slots(self):\n",
-    "        result = {}\n",
-    "        for f in files:\n",
-    "            for l in open(f):\n",
-    "                o = json.loads(l)\n",
-    "                for \n",
-    "                    yield result"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Usage"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Generate slim dsjson"
+    "# Generate slim dsjson"
    ]
   },
   {
@@ -158,7 +154,7 @@
     "processor = Processor()\n",
     "pipeline = FilesPipeline()\n",
     "\n",
-    "slim = pipeline.lines_2_lines(files, processor.process, path_gen=lambda p: p.replace('original', 'slim'), process=True)\n",
+    "slim = pipeline.lines_2_lines(files, processor.process, path_gen=Mapper(raw_folder, slim_folder), process=True)\n",
     "slim"
    ]
   },
@@ -166,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sample"
+    "# Sample"
    ]
   },
   {
@@ -193,7 +189,7 @@
     "sampler = UniformSampler(0.5)\n",
     "\n",
     "processor = Processor(filters=[lambda l: sampler.do(l)])\n",
-    "result = pipeline.lines_2_lines(files, processor.process, path_gen=lambda p: p.replace('original', 'sample'), process=True)\n",
+    "result = pipeline.lines_2_lines(files, processor.process, path_gen=Mapper(raw_folder, sample_folder), process=True)\n",
     "result"
    ]
   },
@@ -201,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predict"
+    "# Predict"
    ]
   },
   {
@@ -226,7 +222,7 @@
     "\n",
     "predictor = Predictor(filters=[lambda l: True])\n",
     "pipeline = FilesPipeline()\n",
-    "cfe = pipeline.lines_2_lines(slim, predictor.predict, path_gen=lambda p: p.replace('slim', 'predict'), process=True)\n",
+    "cfe = pipeline.lines_2_lines(slim, predictor.predict, path_gen=Mapper(raw_folder, predict_folder), process=True)\n",
     "cfe"
    ]
   },
